--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "url": "https://github.com/tim-speed/DTest/issues"
   },
   "homepage": "https://github.com/tim-speed/DTest",
-  "preferGlobal" : true,
-  "bin" : { 
-    "dtest" : "./bin/dtest" 
+  "preferGlobal": true,
+  "bin": {
+    "dtest": "./bin/dtest"
   },
   "optionalDependencies": {
     "generate-js": "^1.1.2"
+  },
+  "dependencies": {
+    "esprima": "^1.2.2"
   }
 }
